# seven-day-ai-agents

./: LICENSE  README.md
.github/workflows/: ci_cd.yml
aihero/: LICENSE
aihero/course/: .gitignore  Ingest_and_extract_data.ipynb  pyproject.toml  (+5 more)
aihero/github_repo_assistant/: README.md  config.py  evaluation.py  evaluation_app.py  evaluation_results.csv  ingest.py  logs.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py
aihero/github_repo_assistant/evaluation_data/: faq_agent_20251228_020017_a78065.json  faq_agent_20251228_025937_ee3694.json  faq_agent_v2_20251228_030704_0134b1.json  faq_agent_v2_20251228_080307_709ffb.json  faq_agent_v2_20251228_080315_ffcd7f.json  faq_agent_v2_20251228_080326_cf3b45.json  faq_agent_v2_20251228_080340_e191f6.json  faq_agent_v2_20251228_080353_53c92f.json  faq_agent_v2_20251228_080401_a2b29d.json  faq_agent_v2_20251228_080411_5cb640.json  faq_agent_v2_20251228_080421_0e8f6f.json  faq_agent_v2_20251228_080428_4900d0.json  faq_agent_v2_20251228_080435_2a59ca.json  faq_agent_v2_20251228_080442_2b3ab3.json  faq_agent_v2_20251228_080450_91c7f6.json  faq_agent_v2_20251228_080458_155a60.json  faq_agent_v2_20251228_080507_05df25.json  faq_agent_v2_20251228_080519_107a78.json  faq_agent_v2_20251228_080528_e9283e.json  faq_agent_v2_20251228_080540_1dba2e.json  faq_agent_v2_20251228_080548_a29fd7.json  faq_agent_v2_20251228_080556_796710.json  faq_agent_v2_20251228_080607_63c74e.json
aihero/github_repo_assistant/tests/: debug_ingestion.py  reproduce_issue.py  test_evaluation.py  test_history.py  test_ingest.py
(+7 files in other folders)
